# devops_lab

./: CMakeLists.txt  Dockerfile  README.md  compose.yml
.github/workflows/: app.yml  cpp-linter.yml
include/: func.hpp  gd.hpp
src/: func.cpp  gd.cpp  main.cpp
test/: func.cpp  gd.cpp
